<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ca.veltus.wraproulette.authentication.LoginSignupViewModel" />

        <import type="ca.veltus.wraproulette.utils.Constants" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        tools:context=".ui.account.AccountFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/adminImageCardView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="90dp"
                android:layout_marginTop="12dp"
                android:clipToPadding="false"
                app:cardBackgroundColor="@color/calendarWhite"
                app:cardCornerRadius="14dp"
                app:cardElevation="22dp"
                app:layout_constraintBottom_toTopOf="@+id/nameEditTextLayout"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed">

                <ImageView
                    android:id="@+id/profilePictureImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:clipToPadding="false"
                    android:contentDescription="@string/profilePictureDescription"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_person_24" />

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/changePictureIconDescription"
                android:elevation="22dp"
                android:src="@drawable/ic_baseline_add_circle_24"
                app:layout_constraintBottom_toBottomOf="@id/adminImageCardView"
                app:layout_constraintEnd_toEndOf="@id/adminImageCardView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/adminImageCardView"
                app:layout_constraintTop_toTopOf="@id/adminImageCardView"
                app:layout_constraintVertical_bias="1.0"
                app:tint="@color/darkOrange" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameEditTextLayout"
                style="@style/PoolTextInputOuterFieldStyle"
                errorRequired="@{ viewModel.errorPoolNameText }"
                errorRequiredInput="@{viewModel.updateUsername}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/departmentEditTextLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminImageCardView"
                app:layout_constraintVertical_bias="0.025"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInputEditText"
                    style="@style/PoolTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:onTextChanged="@{() -> viewModel.clearErrorHelperText(Constants.NAME_ERROR)}"
                    android:text="@={viewModel.updateUsername}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/departmentEditTextLayout"
                style="@style/PoolTextInputOuterFieldStyle"
                errorRequired="@{ viewModel.errorDepartmentText }"
                errorRequiredInput="@{viewModel.updateDepartment}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/saveButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout"
                app:startIconDrawable="@drawable/ic_baseline_work_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/departmentInputEditText"
                    style="@style/PoolTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/department"
                    android:onTextChanged="@{() -> viewModel.clearErrorHelperText(Constants.DEPARTMENT_ERROR)}"
                    android:text="@={viewModel.updateDepartment}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/MainBlueButtonStyle"
                setAccountEnabledArg1="@{viewModel.updateDepartment}"
                setAccountEnabledArg2="@{viewModel.updateUsername}"
                setAccountEnabledArg3="@{viewModel.showLoading}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="68dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="32dp"
                android:onClick="@{() -> viewModel.validateUpdateCurrentUser()}"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/departmentEditTextLayout" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                style="@style/ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>