<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <include
            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navHostFragmentMain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginEnd="24dp"
            android:background="@color/bluePrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/NavigationView"
            app:headerLayout="@layout/nav_header_main"
            app:itemBackground="@drawable/drawer_item_selector"
            app:itemIconTint="@color/drawer_item_selector_text_icon"
            app:itemTextColor="@color/drawer_item_selector_text_icon"
            app:menu="@menu/activity_main_drawer"
            app:subheaderColor="@color/darkHeaderTextColor">

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>