...
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalidEmailAddressHelper">Invalid Email Address</string>
    <string name="logout">Logout</string>
    <string name="join_pool">Join Pool</string>
    <string name="new_pool">New Pool</string>
    <string name="pools">Your Pools</string>
    <string name="account">Account</string>
    <string name="add_member">Add Member</string>
    <string name="edit_pool">Edit Pool</string>
    <string name="leave_pool">Leave Pool</string>
    <string name="membersHeaderTitle">Members</string>
    <string name="finalBetsHeaderTitle">Final Bets</string>
    <string name="betsHeaderTitle">Bets</string>
...
